// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component renders a backdrop 1`] = `
<Fragment>
  <div
    className="dialogDrop"
    key="drop"
    onClick={[Function]}
  />
  <div
    className="dialog"
  >
    <div
      className="dialog-buttons"
    >
      <button
        className="btn-ok"
        key="ok"
        onClick={[Function]}
      >
        Ok
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`Dialog component renders if showing 1`] = `
<Fragment>
  <div
    className="dialog"
  >
    <div
      className="dialog-buttons"
    >
      <button
        className="btn-ok"
        key="ok"
        onClick={[Function]}
      >
        Ok
      </button>
    </div>
  </div>
</Fragment>
`;
